# we-are-bored

./: .gitignore  Cargo.toml  README.md  SMILE_Philosophy.md  We_are_bored_protocol.md  bored.acronyms  directory_of_bored.toml  directory_of_boreds.toml  issues  migrate_to_x0x .md  smile.acronyms  test_sse.py
bored/: Cargo.toml
bored/src/: bored_client.rs  lib.rs  notice.rs  url.rs  x0x_client.rs
bored/tests/: api_tests.rs
surf-bored/: Cargo.toml  README.md
surf-bored/src/: app.rs  directory.rs  display_bored.rs  main.rs  theme.rs  ui.rs
