[package]
name = "bored"
version = "0.2.1"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1.11.1"
serde = {  version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }

